--- a/css/stylesSignIn.css
+++ b/css/stylesSignIn.css
@@ -111,7 +111,13 @@ button{
 .agregar{
     max-width: 20%;
     padding: 19px;
-    right: 80%;
+}
+
+.eliminar{
+    background-color: tomato;
+    max-width: 20%;
+    padding: 19px;
+    margin-left: 30px;
 }
 
 @media screen and (min-width: 480px){
